--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Composition Based Practice 1.html"
+export_path="../../Export/Composition Based Practice 1.html"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
